Fix keyboard width on small viewports

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -50,7 +50,6 @@
   height: 20em;
   width: 100%;
   user-select: none;
-  font-size: 120%;
 }
 
 /* White keys */
